--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.main.allow-bean-definition-overriding=true
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/springDB
 spring.datasource.username=postgres
 spring.datasource.password=A453545w!
 spring.jpa.hibernate.ddl-auto=update
