--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,9 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
+
+# Config Redis
+# spring.data.redis.host=127.0.0.1
+# spring.data.redis.port=6379
+# spring.data.redis.username=default
+# spring.data.redis.password=A453545w!
